tests/ui/iterators/ranges.stderr
error[E0277]: the trait `IntoIterator` is not implemented for `RangeTo<{integer}>`
  --> $DIR/ranges.rs:2:14
   |
LL |     for _ in ..10 {}
   |              ^^^^ the trait `IntoIterator` is not implemented for `RangeTo<{integer}>`, which is required by `RangeTo<{integer}>: IntoIterator`
   |
   = note: required for `RangeTo<{integer}>` to implement `IntoIterator`

error[E0277]: the trait `IntoIterator` is not implemented for `RangeToInclusive<{integer}>`
  --> $DIR/ranges.rs:4:14
   |
LL |     for _ in ..=10 {}
   |              ^^^^^ the trait `IntoIterator` is not implemented for `RangeToInclusive<{integer}>`, which is required by `RangeToInclusive<{integer}>: IntoIterator`
   |
   = note: required for `RangeToInclusive<{integer}>` to implement `IntoIterator`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
